# REST_API_CPP

./: CMakeLists.txt  Main.cpp  README.md  c_cpp_properties.json  config.h
Controller/: HttpController.cpp  HttpControllerClass.h
DataModel/: UserDatabase.h
Functions/: migrations_manager.h  runMigrations.cpp  sql_reader.h
Models/: User.h
SQLscripts/: ADD_USER.sql
Service/: UserService.h
